// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Posts Create comment Create a comment on a comment (Authenticated) 1`] = `
Object {
  "author": Object {
    "username": "User 1",
  },
  "content": "My comment",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "parentCommentId": 1001,
  "updatedAt": Any<String>,
}
`;

exports[`Posts Create comment Create a comment on a comment (Unauthenticated) 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`Posts Create comment Create a comment on a post (Authenticated) 1`] = `
Object {
  "author": Object {
    "username": "User 1",
  },
  "content": "My comment",
  "createdAt": Any<String>,
  "deletedAt": null,
  "id": Any<Number>,
  "parentCommentId": null,
  "updatedAt": Any<String>,
}
`;

exports[`Posts Create comment Create a comment on a post (Unauthenticated) 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`Posts Create post Create a post (Authenticated) 1`] = `
Object {
  "author": Object {
    "username": "User 1",
  },
  "content": "My content",
  "createdAt": Any<String>,
  "id": Any<Number>,
  "link": "https://www.google.com/",
  "tags": Array [
    "tag1",
    "tag2",
  ],
  "title": "Post",
  "totalComments": 0,
  "updatedAt": Any<String>,
}
`;

exports[`Posts Create post Create a post (Unauthenticated) 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`Posts Delete comment Delete a comment (Invalid user) 1`] = `
Object {
  "error": "Forbidden",
  "message": "You are not the author of this comment",
  "statusCode": 403,
}
`;

exports[`Posts Delete comment Delete a comment (Unauthenticated) 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`Posts Delete post Delete a post (Invalid user) 1`] = `
Object {
  "error": "Forbidden",
  "message": "You are not allowed to delete this post",
  "statusCode": 403,
}
`;

exports[`Posts Delete post Delete a post (Unauthenticated) 1`] = `
Object {
  "message": "Unauthorized",
  "statusCode": 401,
}
`;

exports[`Posts Get comments on post Get comments on post with id 1013 1`] = `
Array [
  Object {
    "author": Object {
      "username": "User 2",
    },
    "content": "Omnis perspiciatis qui quia commodi sequi modi. Nostrum quam aut cupiditate est facere omnis possimus. Tenetur similique nemo illo soluta molestias facere quo. Ipsam totam facilis delectus nihil quidem soluta vel est omnis.",
    "createdAt": "2022-12-27T12:12:39.423Z",
    "deletedAt": null,
    "id": 1023,
    "parentCommentId": null,
    "updatedAt": "2022-12-27T12:12:39.423Z",
  },
]
`;

exports[`Posts Get posts Get a single post 1`] = `
Object {
  "author": Object {
    "username": "User 2",
  },
  "content": "Quia sit architecto itaque voluptas aliquam. Rem veritatis qui quasi sint velit dolorem maxime voluptatem. Sit aut laboriosam aspernatur dicta non consequatur qui recusandae. Dignissimos voluptatem labore praesentium.",
  "createdAt": "2022-06-13T18:29:25.771Z",
  "id": 1013,
  "link": "https://fugiat.io",
  "tags": Array [
    "nulla",
  ],
  "title": "Synergized 4th generation success",
  "totalComments": 1,
  "updatedAt": "2022-06-13T18:29:25.771Z",
}
`;

exports[`Posts Get posts Get multiple posts 1`] = `
Object {
  "data": Array [
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Et id harum unde et ratione minima non. Suscipit ipsum rem. Sed asperiores quaerat dolorum autem nihil voluptatem et hic ut. Molestiae rerum autem. Dolores nam soluta officia pariatur debitis.",
      "createdAt": "2022-12-21T13:50:49.826Z",
      "id": 1014,
      "link": "https://occaecati.name",
      "tags": Array [
        "enim",
        "laborum",
      ],
      "title": "Versatile national time-frame",
      "totalComments": 0,
      "updatedAt": "2022-12-21T13:50:49.826Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Corrupti aspernatur minus eum. Nihil omnis fuga doloremque eius ipsam saepe impedit. Nobis odio omnis laboriosam similique nostrum voluptas magnam commodi at. Magnam quibusdam dolore. Dolorem minima neque est amet voluptate explicabo similique quos. Rerum esse pariatur.",
      "createdAt": "2022-12-02T12:03:21.987Z",
      "id": 1004,
      "link": "https://ducimus.com",
      "tags": Array [],
      "title": "Focused asymmetric contingency",
      "totalComments": 3,
      "updatedAt": "2022-12-02T12:03:21.987Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Corporis distinctio delectus a ipsam commodi voluptas. Facilis minus sit numquam. Iusto quod consequatur molestias dolore dolor atque quidem distinctio. Voluptatem hic debitis sint ut sed recusandae qui consequatur. Nulla veritatis est.",
      "createdAt": "2022-11-17T23:47:04.785Z",
      "id": 1005,
      "link": "http://quos.io",
      "tags": Array [
        "vel",
        "vitae",
        "maiores",
      ],
      "title": "Profit-focused coherent application",
      "totalComments": 1,
      "updatedAt": "2022-11-17T23:47:04.785Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Deserunt laboriosam quas autem repellat aspernatur ipsa accusamus pariatur deserunt. Nam aut eum vel ut. Sunt dicta id eveniet minus. Debitis temporibus quod.",
      "createdAt": "2022-08-08T23:27:55.454Z",
      "id": 1006,
      "link": "http://possimus.dev",
      "tags": Array [],
      "title": "Secured methodical frame",
      "totalComments": 1,
      "updatedAt": "2022-08-08T23:27:55.454Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Omnis perspiciatis qui quia commodi sequi modi. Nostrum quam aut cupiditate est facere omnis possimus. Tenetur similique nemo illo soluta molestias facere quo. Ipsam totam facilis delectus nihil quidem soluta vel est omnis.",
      "createdAt": "2022-07-22T21:10:56.806Z",
      "id": 1003,
      "link": "http://quae.info",
      "tags": Array [
        "aliquid",
        "sed",
      ],
      "title": "Configurable global help-desk",
      "totalComments": 1,
      "updatedAt": "2022-07-22T21:10:56.806Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Ut a voluptas labore et dolores magnam. Dolor deleniti dolores temporibus non autem. Voluptatibus numquam reiciendis nesciunt ipsa numquam enim. Unde velit optio quia.",
      "createdAt": "2022-07-19T10:05:30.942Z",
      "id": 1002,
      "link": "http://excepturi.io",
      "tags": Array [
        "sunt",
        "repellat",
      ],
      "title": "Cloned human-resource knowledge base",
      "totalComments": 1,
      "updatedAt": "2022-07-19T10:05:30.942Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Dolor officia a fuga omnis sit. Ut atque est nostrum. Quos aut quo eos vel velit autem et aspernatur.",
      "createdAt": "2022-07-15T20:50:58.831Z",
      "id": 1011,
      "link": "http://consequatur.dev",
      "tags": Array [
        "nostrum",
        "id",
      ],
      "title": "Realigned empowering monitoring",
      "totalComments": 5,
      "updatedAt": "2022-07-15T20:50:58.831Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Quaerat veritatis tempora. Consectetur id fuga iusto voluptas quibusdam est. Et aut dolor est. Sunt mollitia libero.",
      "createdAt": "2022-07-02T18:01:30.784Z",
      "id": 1001,
      "link": "https://doloribus.io",
      "tags": Array [
        "dicta",
      ],
      "title": "Cloned incremental structure",
      "totalComments": 3,
      "updatedAt": "2022-07-02T18:01:30.784Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Aperiam autem non et aut illum ut nihil laborum omnis. Vitae et ab et. Cupiditate et est delectus. Mollitia qui qui dolores reiciendis perferendis voluptates maiores. Omnis corporis cumque sequi sequi excepturi velit laborum nobis. Neque id maiores voluptatem est debitis.",
      "createdAt": "2022-06-19T18:49:00.047Z",
      "id": 1008,
      "link": "http://unde.io",
      "tags": Array [
        "quos",
        "est",
      ],
      "title": "Customizable client-driven encoding",
      "totalComments": 1,
      "updatedAt": "2022-06-19T18:49:00.047Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Quia sit architecto itaque voluptas aliquam. Rem veritatis qui quasi sint velit dolorem maxime voluptatem. Sit aut laboriosam aspernatur dicta non consequatur qui recusandae. Dignissimos voluptatem labore praesentium.",
      "createdAt": "2022-06-13T18:29:25.771Z",
      "id": 1013,
      "link": "https://fugiat.io",
      "tags": Array [
        "nulla",
      ],
      "title": "Synergized 4th generation success",
      "totalComments": 1,
      "updatedAt": "2022-06-13T18:29:25.771Z",
    },
  ],
  "from": 0,
  "perPage": 10,
  "to": 10,
  "total": 15,
}
`;

exports[`Posts Get posts Get multiple posts with pagination 1`] = `
Object {
  "data": Array [
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Minima soluta sed sed et optio explicabo at distinctio repudiandae. Magnam deleniti a ea. Non velit accusamus veniam qui. Necessitatibus velit ad aut officiis in officiis quasi. Sunt nulla dolores voluptatem esse magnam ut.",
      "createdAt": "2022-06-06T13:34:27.804Z",
      "id": 1010,
      "link": "http://vitae.name",
      "tags": Array [
        "nemo",
        "fugiat",
      ],
      "title": "Enhanced responsive software",
      "totalComments": 3,
      "updatedAt": "2022-06-06T13:34:27.804Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Aut facilis qui. Cupiditate sit ratione eum sunt rerum impedit. Qui suscipit debitis et et voluptates voluptatem voluptatibus. Quas voluptatum quae corporis corporis possimus.",
      "createdAt": "2022-05-23T12:54:50.455Z",
      "id": 1007,
      "link": "http://qui.info",
      "tags": Array [],
      "title": "Re-engineered neutral database",
      "totalComments": 0,
      "updatedAt": "2022-05-23T12:54:50.455Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Quo voluptatem quia numquam laudantium sit quibusdam aut. Veritatis omnis neque ea saepe hic enim. Nam odit dolor non consequuntur perspiciatis inventore ut sint. Velit quod praesentium adipisci modi.",
      "createdAt": "2022-05-08T02:58:30.546Z",
      "id": 1012,
      "link": "https://omnis.name",
      "tags": Array [
        "ducimus",
      ],
      "title": "Configurable zero administration projection",
      "totalComments": 1,
      "updatedAt": "2022-05-08T02:58:30.546Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Veniam commodi autem voluptatibus eos dolor quas reprehenderit. Praesentium cupiditate tempore et reprehenderit. Deleniti exercitationem illum maiores. Reprehenderit odio in ea voluptatem ut ut ullam.",
      "createdAt": "2022-05-03T11:16:10.308Z",
      "id": 1015,
      "link": "http://tenetur.name",
      "tags": Array [
        "beatae",
      ],
      "title": "Monitored bottom-line productivity",
      "totalComments": 2,
      "updatedAt": "2022-05-03T11:16:10.308Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Sunt velit facere fuga et voluptas inventore itaque. Necessitatibus ratione in esse. Quasi dignissimos quia est sequi incidunt enim reiciendis. At omnis iure in doloremque. Aut tempore consequatur facilis est ut distinctio est quas. Autem sunt est saepe quasi sed reprehenderit error magnam.",
      "createdAt": "2022-02-09T12:33:59.515Z",
      "id": 1009,
      "link": "https://sapiente.com",
      "tags": Array [
        "facilis",
        "nihil",
        "id",
      ],
      "title": "Focused logistical definition",
      "totalComments": 2,
      "updatedAt": "2022-02-09T12:33:59.515Z",
    },
  ],
  "from": 10,
  "perPage": 10,
  "to": 20,
  "total": 15,
}
`;

exports[`Posts Get posts Get multiple posts with sort 1`] = `
Object {
  "data": Array [
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Quaerat veritatis tempora. Consectetur id fuga iusto voluptas quibusdam est. Et aut dolor est. Sunt mollitia libero.",
      "createdAt": "2022-07-02T18:01:30.784Z",
      "id": 1001,
      "link": "https://doloribus.io",
      "tags": Array [
        "dicta",
      ],
      "title": "Cloned incremental structure",
      "totalComments": 3,
      "updatedAt": "2022-07-02T18:01:30.784Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Ut a voluptas labore et dolores magnam. Dolor deleniti dolores temporibus non autem. Voluptatibus numquam reiciendis nesciunt ipsa numquam enim. Unde velit optio quia.",
      "createdAt": "2022-07-19T10:05:30.942Z",
      "id": 1002,
      "link": "http://excepturi.io",
      "tags": Array [
        "sunt",
        "repellat",
      ],
      "title": "Cloned human-resource knowledge base",
      "totalComments": 1,
      "updatedAt": "2022-07-19T10:05:30.942Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Omnis perspiciatis qui quia commodi sequi modi. Nostrum quam aut cupiditate est facere omnis possimus. Tenetur similique nemo illo soluta molestias facere quo. Ipsam totam facilis delectus nihil quidem soluta vel est omnis.",
      "createdAt": "2022-07-22T21:10:56.806Z",
      "id": 1003,
      "link": "http://quae.info",
      "tags": Array [
        "aliquid",
        "sed",
      ],
      "title": "Configurable global help-desk",
      "totalComments": 1,
      "updatedAt": "2022-07-22T21:10:56.806Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Corrupti aspernatur minus eum. Nihil omnis fuga doloremque eius ipsam saepe impedit. Nobis odio omnis laboriosam similique nostrum voluptas magnam commodi at. Magnam quibusdam dolore. Dolorem minima neque est amet voluptate explicabo similique quos. Rerum esse pariatur.",
      "createdAt": "2022-12-02T12:03:21.987Z",
      "id": 1004,
      "link": "https://ducimus.com",
      "tags": Array [],
      "title": "Focused asymmetric contingency",
      "totalComments": 3,
      "updatedAt": "2022-12-02T12:03:21.987Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Corporis distinctio delectus a ipsam commodi voluptas. Facilis minus sit numquam. Iusto quod consequatur molestias dolore dolor atque quidem distinctio. Voluptatem hic debitis sint ut sed recusandae qui consequatur. Nulla veritatis est.",
      "createdAt": "2022-11-17T23:47:04.785Z",
      "id": 1005,
      "link": "http://quos.io",
      "tags": Array [
        "vel",
        "vitae",
        "maiores",
      ],
      "title": "Profit-focused coherent application",
      "totalComments": 1,
      "updatedAt": "2022-11-17T23:47:04.785Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Deserunt laboriosam quas autem repellat aspernatur ipsa accusamus pariatur deserunt. Nam aut eum vel ut. Sunt dicta id eveniet minus. Debitis temporibus quod.",
      "createdAt": "2022-08-08T23:27:55.454Z",
      "id": 1006,
      "link": "http://possimus.dev",
      "tags": Array [],
      "title": "Secured methodical frame",
      "totalComments": 1,
      "updatedAt": "2022-08-08T23:27:55.454Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Aut facilis qui. Cupiditate sit ratione eum sunt rerum impedit. Qui suscipit debitis et et voluptates voluptatem voluptatibus. Quas voluptatum quae corporis corporis possimus.",
      "createdAt": "2022-05-23T12:54:50.455Z",
      "id": 1007,
      "link": "http://qui.info",
      "tags": Array [],
      "title": "Re-engineered neutral database",
      "totalComments": 0,
      "updatedAt": "2022-05-23T12:54:50.455Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Aperiam autem non et aut illum ut nihil laborum omnis. Vitae et ab et. Cupiditate et est delectus. Mollitia qui qui dolores reiciendis perferendis voluptates maiores. Omnis corporis cumque sequi sequi excepturi velit laborum nobis. Neque id maiores voluptatem est debitis.",
      "createdAt": "2022-06-19T18:49:00.047Z",
      "id": 1008,
      "link": "http://unde.io",
      "tags": Array [
        "quos",
        "est",
      ],
      "title": "Customizable client-driven encoding",
      "totalComments": 1,
      "updatedAt": "2022-06-19T18:49:00.047Z",
    },
    Object {
      "author": Object {
        "username": "User 2",
      },
      "content": "Sunt velit facere fuga et voluptas inventore itaque. Necessitatibus ratione in esse. Quasi dignissimos quia est sequi incidunt enim reiciendis. At omnis iure in doloremque. Aut tempore consequatur facilis est ut distinctio est quas. Autem sunt est saepe quasi sed reprehenderit error magnam.",
      "createdAt": "2022-02-09T12:33:59.515Z",
      "id": 1009,
      "link": "https://sapiente.com",
      "tags": Array [
        "facilis",
        "nihil",
        "id",
      ],
      "title": "Focused logistical definition",
      "totalComments": 2,
      "updatedAt": "2022-02-09T12:33:59.515Z",
    },
    Object {
      "author": Object {
        "username": "User 1",
      },
      "content": "Minima soluta sed sed et optio explicabo at distinctio repudiandae. Magnam deleniti a ea. Non velit accusamus veniam qui. Necessitatibus velit ad aut officiis in officiis quasi. Sunt nulla dolores voluptatem esse magnam ut.",
      "createdAt": "2022-06-06T13:34:27.804Z",
      "id": 1010,
      "link": "http://vitae.name",
      "tags": Array [
        "nemo",
        "fugiat",
      ],
      "title": "Enhanced responsive software",
      "totalComments": 3,
      "updatedAt": "2022-06-06T13:34:27.804Z",
    },
  ],
  "from": 0,
  "perPage": 10,
  "to": 10,
  "total": 15,
}
`;
